# PythonExerciseGeneratorAndDistributor

./: .codex_todo.json  .dockerignore  .gitignore  ACTION_PLAN.md  AGENTS.md  CODE_REVIEW.md  Dockerfile  MIGRATION_CHECKLIST_TEMPLATE.md  OUTSTANDING_ISSUES.md  PHASE_10_MIGRATION_CHECKLIST.md  PHASE_11_MIGRATION_CHECKLIST.md  PHASE_13_MIGRATION_CHECKLIST.md  PHASE_1_MIGRATION_CHECKLIST.md  PHASE_1_REPOSITORY_INVENTORY.md  PHASE_2_MIGRATION_CHECKLIST.md  PHASE_3_MIGRATION_CHECKLIST.md  PHASE_4_MIGRATION_CHECKLIST.md  PHASE_6_MIGRATION_CHECKLIST.md  PLAN.md  PYRIGHT_REVIEW_REPORT.md  README.md  SLOP_REVIEW.md  SPEC.md  TODO.md  WORKFLOW_SPEC.md  autograde_plugin_fix.patch  conftest.py  main.py  package.json  pyproject.toml  pyrightconfig.json  pytest.ini
.codex/: codex-delegate-config.json  repo_instructions.md
.devcontainer/: devcontainer.json
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md
.vibe/: config.toml
docs/: CLI_README.md  Comprehensive_Analysis_of_GitHub_Classroom_Autogra.md  GitHub_Classroom_Autograding_Integration_Guide__Us.md  README.md  autograding-cli.md  development.md  docker-devcontainer-setup.md  execution-model.md  exercise-generation-cli.md  exercise-generation.md  exercise-testing-new.md  exercise-testing-refactor-action-plan.md  exercise-testing-refactor-review.md  exercise-testing.md  github-classroom-autograding-guide.md  pedagogy.md  project-structure.md  setup.md  testing-framework.md
exercise_metadata/: IMPLEMENTATION_NOTES.md  __init__.py  manifest.py  registry.py  resolver.py  schema.py
exercise_runtime_support/: consumer_matrix.py  execution_variant.py  exercise_catalogue.py  exercise_test_support.py  helpers.py  notebook_grader.py  pytest_collection_guard.py  support_matrix.py
exercises/: __init__.py  example_hello.py  migration_manifest.json
notebooks/: ex001_sanity.ipynb  ex002_sequence_modify_basics.ipynb  ex003_sequence_modify_variables.ipynb  ex004_sequence_debug_syntax.ipynb  ex005_sequence_debug_logic.ipynb  ex006_sequence_modify_casting.ipynb  ex007_data_types_debug_casting.ipynb  ex007_sequence_debug_casting.ipynb
scripts/: __init__.py  build_autograde_payload.py  clear_notebook_metadata.py  install_git_hooks.py  jupyter_watchdog.py  migrate_debug_format.py  migrate_exercise_data.py  new_exercise.py  run_pytest_variant.py  sync_construct_template_repos.py  verify_exercise_quality.py  verify_solutions.sh
template_repo_files/: .gitignore  (+4 more)
(+479 files in other folders)
