[project]
name = "python-tutor-exercises"
version = "0.1.0"
description = "Notebook-based Python exercises with automated tests (GitHub Classroom friendly)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Hamish Arnold" }]

dependencies = [
  "pytest>=9.0.2",
  "ruff>=0.14.13",
  "ipykernel>=7.1.0",
  "jupyterlab>=4.5.2",
  "tabulate>=0.9.0",
  "pyright>=1.1.408",
]

[build-system]
requires = ["setuptools>=71.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "ruff>=0.14.13",
  "ipykernel>=7.1.0",
  "jupyterlab>=4.5.2",
  "radon>=5.1",
]

[project.scripts]
# Console entrypoint for the template repository CLI. Installs as `template-repo-cli` when the package is
# installed (e.g., via `uv sync` once the project is packaged).
template-repo-cli = "scripts.template_repo_cli.cli:main"
template_repo_cli = "scripts.template_repo_cli.cli:main"

[tool.setuptools]
packages = ["scripts.template_repo_cli", "scripts.template_repo_cli.core", "scripts.template_repo_cli.utils", "tests"]

[tool.uv]
package = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
markers = ["task(taskno): marks the exercise task number"]

[tool.ruff]
line-length = 100
exclude = [
  "notebooks/**",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C90", "LOG", "PIE", "RUF", "SIM", "PLR"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 8
